--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,23 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+        <!-- Primary Meta Tags -->
+    <title>Proview — Real Estate Media</title>
+    <meta name="title" content="Proview — Real Estate Media">
+    <meta name="description" content="Unlock a world of captivating real estate media. Explore stunning visuals, immersive tours, and expert insights. Find your dream property with ease and stay ahead in the competitive market.">
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="React + Tailwind Starter">
+    <meta property="og:description" content="Aryan's front-end starter template to quickly get your hands dirty with React, Tailwind and React Router.">
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Proview — Real Estate Media">
+    <meta property="twitter:description" content="Unlock a world of captivating real estate media. Explore stunning visuals, immersive tours, and expert insights. Find your dream property with ease and stay ahead in the competitive market.">
+    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
   </body>
 </html>
